--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
-</head>
-<body>
-    <div id="main">  
-        <div class="container">
-		Hello World!
-		</div>
-	</div>
-</body>
+  <head>
+    <title>Bootstrap 101 Template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link href="css/bootstrap.min.css" rel="stylesheet" media="screen"> -->
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="css/style.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class=".container-fluid">
+        <div class="row pf-top-vh">
+            <div class="col-sm">
+                <div class="pf-topleft-bg">
+                </div>
+            </div>
+            <div class="col-sm-7">
+                <div class="pf-topright-welcome-box">
+                    <h1>Welcome!</h1>
+                    <p>I'am a 30 years old Consultant living in Kiel, Germany.</p>
+                </div>
+            </div> 
+        </div>
+        <div class="row pf-projects-vh">
+            <div class="col-sm">a</div>
+            <div class="col-sm">b</div>
+            <div class="col-sm">c</div>
+            <div class="col-sm">d</div>
+        </div>
+    </div>
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+  </body>
 </html>
