--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet" media="screen"> -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class=".container-fluid">
         <div class="row pf-top-vh">
-            <div class="col-sm">
+            <div class="col-md pf-padding-zero">
                 <div class="pf-topleft-bg">
                 </div>
             </div>
-            <div class="col-sm-7">
+            <div class="col-sm">
                 <div class="pf-topright-welcome-box">
-                    <h1>Welcome!</h1>
-                    <p>I'am a 30 years old Consultant living in Kiel, Germany.</p>
+                    <p class="pf-text-welcome">Welcome!</p>
+                    <p class="pf-text-header">My name is</p>
+                    <p class="pf-text-header">Tom Frotscher</p>
+                    <p class="pf-text-header">I work as a Consultant at Consist Software Solutions.</p>
+                    <p class="pf-text-header font-weight-light">I am 30 years old and live in the beautiful city of Kiel, Germany.</p>
                 </div>
             </div> 
         </div>
