--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="col-sm">d</div>
         </div>
     </div>
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="lib/parallax/parallax.min.js"></script>
   </body>
