--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet" media="screen"> -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand|Raleway:200" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
