--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet" media="screen"> -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand|Raleway:200" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500|Quicksand|Raleway:200" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -13,15 +13,14 @@
                 <a class="navbar-brand" href="#">TomFrotscher.de</a>
           </nav>
       <section class="parallax-background parallax-window" data-parallax="scroll" data-image-src="images/top_bg.jpg">
-
-      </section>
+        <div id="container-caption" class="pf-welcome-box"><div class="pf-text-header ">Big Data Consultant</div><div class="pf-text-city">From the beautiful City of Kiel</div></div>
+      </section><!--
         <div class="row pf-projects-vh">
             <div class="col-sm">a</div>
             <div class="col-sm">b</div>
             <div class="col-sm">c</div>
             <div class="col-sm">d</div>
-        </div>
-    </div>
+        </div>-->
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="lib/parallax/parallax.min.js"></script>
