--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootstrap 101 Template</title>
+    <title>Tom Frotscher</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet" media="screen"> -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
